--- a/index.html
+++ b/index.html
@@ -1,25 +1,98 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="eng">
+    
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Super Paint</title>
+        <link rel="stylesheet" href="paint.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <title>LearnPix</title>
     </head>
+
     <body>
-        <section id="section1" class="Zhienkozha">
-            <div class="Zhandos">
-                <h1 id="title">Super Paint</h1>
+        <header>
+            <nav>
+                <span>LearnPix</span>
+                <span>About</span>
+                <a href="#"><i class="fa-regular fa-user" style="color: #ffffff;"></i></a>
+            </nav>
+        </header>
+
+        <main>
+            <section id="generate-block">
+                <div class="wrapper ">
+                    <div class="dflex center m60">
+                        <div class="light leftScreen"></div>
+                        <div class="light rightScreen"></div>
+                        <h1 style="text-align: center;background:rgba(0,0,0,0)">Draw your picture and see how neurons learn</h1>
+                    </div>
+                    <p>We have new born neural network model here 🐣. <br>It doesn't know how any of the numbers look.<br>
+                        In order to teach, we need to give it lots of examples of pictures, so let's get started!
+                        <br>
+                    </p>
+                    <p>
+                        <br>
+                        First, choose the number you will be drawing, so the model will understand what is going on.
+                        <br>
+                    </p>
+                    <p>
+                        <span>
+                            Enter your number here:   
+                        </span>
+                        <input type="number" name="">
+                    </p>
+                    <p>
+                        Then, press the <span style="background-color: rgb(255, 77, 77); border-radius: 5px;padding: 0 5px;">save</span> button to start the learning function.
+                        <br>
+                        <img src="arrow.png" style="width: 130px;">
+                    </p> 
+                </div>
+                <div class="wrapper dflex">
+                    <div class="generate-box">
+                        <div class="generate-tools htools">
+                            <button onclick="learn();" class="btn tool"><i class="fa-regular fa-floppy-disk" style="color: #ffffff;"></i></button>
+                        </div>
+                        <div class="generate-toolbar htools">
+                            <div class="tools">
+                                <i class="drawIcon fa-regular fa-circle"></i>
+                                <i class="drawIcon fa-regular fa-square"></i>
+                                <i class="drawIcon fa-solid fa-pencil"></i>
+                                <i class="drawIcon fa-solid fa-minus"></i>                            
+                            </div>
+                        </div>
+                        <div id="generate-window">
+                        </div>
+                        <div class="hidden">
+                            <div class="pixel" ondragstart="return false;" id="originalPixel"></div>
+                        </div>
+                    </div>
+                    <div id="neuronSection" class="generate-box sectioNeurons">
+                        <div class="neuralNetwork" id="neuralNetworkBox">
+                            <div class="layerbox" id="layerbox0"></div>
+                        </div>
+                        <div class="hidden">
+                            <div class="neuron" id="originalNeuron">0</div>
+                            <div class="rect" id="originalRect"></div>
+                        </div>                
+                    </div>
+                    <div id="graphsSection" class="generate-box"></div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="dflex center m120">
+                <span style="color: #474b55">made by <a style="color: #474b55; text-decoration: underline;" href="https://github.com/kuanyshoteu">Kuanysh Oteu</a></span>
             </div>
-        </section>
-        <section class="Zhienkozha">
-            <div class="paintbox" id="paintbox">
-                
-            </div>
-            <div class="hidden">
-                <div class="pixel" id="originalPixel"></div>
-            </div>
-        </section>
-        <section class="Zhienkozha">
-            <button onclick="changeTitle();">Сохранить</button>
-        </section>
-        <script src="script.js"></script>
+        </footer>
     </body>
+    <script  src="classes.js"></script>
+    <script  src="main.js"></script>
+    <script src="data.js"></script>
+    <script src="neuralNetwork.js"></script>
+    <script src="paint.js"></script>
+    <script src="neuralNetworkHTML.js"></script>
 </html>
