--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <span>TeachPix</span>
                 <span>About</span>
-                <a href="#nnaodasijdasdoaisjdaoisjd"><i class="fa-regular fa-user" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-regular fa-user" style="color: #ffffff;"></i></a>
             </nav>
         </header>
 
