--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Super puper site</title>
+        <title>Kniga</title>
     </head>
     <body>
     	<div class="krug"></div>
