--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Kniga</title>
+        <title>Super puper site</title>
     </head>
     <body>
     	<div class="krug"></div>
@@ -26,18 +26,20 @@
     			<img src="me.png">
     		</div>
     	</section>
-    	<section id="aboutme">About me</section>
+    	<section id="aboutme">
+			<div style="text-align: center;">
+				<h1 id="rollanText">Rollan ne otvlekaisia</h1>
+				<input id="input1" placeholder="Введите текст">
+				<a onclick="rollan()" class="btn">Work</a>
+			</div>
+		</section>
     	<section id="skills">
     		<div class="dflex">
     			<div class="w400">
 	    			<h2>Алгебра</h2>
 	    		</div>
     			<div class="dflex ml50">
-    				<div class="circle"></div>
-    				<div class="circle"></div>
-    				<div class="circle"></div>
-    				<div class="circle"></div>
-    				<div class="circle"></div>
+    				
     			</div>
     		</div>
     		<div class="dflex">
@@ -58,5 +60,6 @@
     	</section>
     	<section id="projects">Projects</section>
     	<section id="blog">Blog</section>
+		<script src="script.js"></script>
     </body>
 </html>
